--- a/Tree Noises.csproj
+++ b/Tree Noises.csproj
@@ -81,12 +81,20 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Geometry\Cylinder.cs" />
+    <Compile Include="Assets\ColorPalette.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Standard Assets\CrossPlatformInput\CrossPlatformInputGuidelines.txt" />
+    <None Include="Assets\Standard Assets\Environment\Shaders\SeaShader.shader" />
+    <None Include="Assets\Standard Assets\Environment\Shaders\SkyShader.shader" />
+    <None Include="Assets\Standard Assets\Environment\Shaders\Test1.shader" />
     <None Include="Assets\Standard Assets\FirstPersonCharacterGuidelines.txt" />
     <None Include="Assets\Standard Assets\Fonts\OpenSans\License!.txt" />
+    <None Include="Assets\Standard Assets\Water (Basic)\Shaders\FXWaterBasic.shader" />
+    <None Include="Assets\Standard Assets\Water\Water\Shaders\FXWaterPro.shader" />
+    <None Include="Assets\Standard Assets\Water\Water4\Shaders\FXWater4Advanced.shader" />
+    <None Include="Assets\Standard Assets\Water\Water4\Shaders\FXWater4Simple.shader" />
+    <None Include="Assets\Standard Assets\Water\Water4\Shaders\WaterInclude.cginc" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
