--- a/Tree Noises.Plugins.csproj
+++ b/Tree Noises.Plugins.csproj
@@ -150,6 +150,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Standard Assets\CrossPlatformInput\CrossPlatformInputGuidelines.txt" />
+    <None Include="Assets\Standard Assets\Environment\Shaders\PaletteShader.shader" />
     <None Include="Assets\Standard Assets\Environment\Shaders\SeaShader.shader" />
     <None Include="Assets\Standard Assets\Environment\Shaders\SkyShader.shader" />
     <None Include="Assets\Standard Assets\Environment\Shaders\Test1.shader" />
