--- a/Tree Noises.Plugins.csproj
+++ b/Tree Noises.Plugins.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Assets\Standard Assets\Environment\Scripts\CharacterPlacer.cs" />
     <Compile Include="Assets\Standard Assets\Environment\Scripts\ClickBegin.cs" />
     <Compile Include="Assets\Standard Assets\Environment\Scripts\ClickExit.cs" />
+    <Compile Include="Assets\Standard Assets\Environment\Scripts\ColorPalette.cs" />
     <Compile Include="Assets\Standard Assets\Environment\Scripts\CubeGenerator.cs" />
     <Compile Include="Assets\Standard Assets\Environment\Scripts\FPSDisplay.cs" />
     <Compile Include="Assets\Standard Assets\Environment\Scripts\IFeatureGenerator.cs" />
@@ -108,6 +109,7 @@
     <Compile Include="Assets\Standard Assets\Environment\Scripts\SeussNoise1.cs" />
     <Compile Include="Assets\Standard Assets\Environment\Scripts\SeussNoise2.cs" />
     <Compile Include="Assets\Standard Assets\Environment\Scripts\SeussNoise3.cs" />
+    <Compile Include="Assets\Standard Assets\Environment\Scripts\ShaderInit.cs" />
     <Compile Include="Assets\Standard Assets\Environment\Scripts\SkyHeight.cs" />
     <Compile Include="Assets\Standard Assets\Environment\Scripts\Terrain.cs" />
     <Compile Include="Assets\Standard Assets\Environment\Scripts\TerrainChunk.cs" />
